Enhance temperature display UI and fix character encoding issues
- Fix Polish character display in ImGui interface using short month names
- Improve temperature value alignment with right-justified formatting
- Add alternating row colors for better readability of daily temperature data
- Fix visual shifting when expanding/collapsing year and month sections
- Update translation files (en.json, pl.json) with short month names
- Optimize column widths for more consistent display
- Improve visual hierarchy with subtle color differences between levels

--- a/assets/temperaturemonitor/lang/en.json
+++ b/assets/temperaturemonitor/lang/en.json
@@ -44,6 +44,7 @@
     "sensor_set_location": "Temperature sensor set to your current location: ({0}, {1}, {2})",
     "sensor_not_configured": "Temperature sensor location is not properly configured.",
     "command_unknown": "Unknown command. Available commands: /tempsensor setspawn, /tempsensor setcurrlocation",
+    "days": "Days",
     "day": "Day",
     "year": "Year",
     "month_1": "January",
@@ -57,5 +58,17 @@
     "month_9": "September",
     "month_10": "October",
     "month_11": "November",
-    "month_12": "December"
+    "month_12": "December",
+    "month_short_1": "Jan",
+    "month_short_2": "Feb",
+    "month_short_3": "Mar",
+    "month_short_4": "Apr",
+    "month_short_5": "May",
+    "month_short_6": "Jun",
+    "month_short_7": "Jul",
+    "month_short_8": "Aug",
+    "month_short_9": "Sep",
+    "month_short_10": "Oct",
+    "month_short_11": "Nov",
+    "month_short_12": "Dec"
 }
