security: restrict sensor location changes to admins only
- Modified command handling to check admin role before location changes
- Regular players can still view sensor location but cannot modify it
- Added appropriate permission messages and feedback
- Updated translations for permission-related messages

--- a/assets/temperaturemonitor/lang/en.json
+++ b/assets/temperaturemonitor/lang/en.json
@@ -1,43 +1,13 @@
 {
-    "startup_message": "TemperatureMonitor: Start method called! Data will be saved in {0}",
-    "client_started": "TemperatureMonitor: Client-side start method called!",
-    "server_started": "TemperatureMonitor: Server-side start method called!",
-    "new_game_hour": "TemperatureMonitor: New game hour: {0}",
     "temperature_log": "TemperatureMonitor: {0} - Game date: {1}, Temperature: {2}°C",
-    "saving_data": "TemperatureMonitor: Attempting to save data, number of entries: {0}",
-    "no_data_to_save": "TemperatureMonitor: No data to save.",
-    "directory_path": "TemperatureMonitor: Directory path: {0}",
-    "creating_directory": "TemperatureMonitor: Creating directory: {0}",
-    "saving_to_file": "TemperatureMonitor: Saving to file: {0}",
-    "file_saved": "TemperatureMonitor: File successfully saved.",
-    "file_error": "TemperatureMonitor: ERROR: File does not exist after save attempt!",
-    "data_loaded": "TemperatureMonitor: Loaded {0} temperature records from file.",
-    "closing_save": "TemperatureMonitor: Closing - saving {0} temperatures",
     "temperature_data_processing_error": "Error processing data for {0}: {1}",
     "reading_data_error": "Error reading data: {0}",
     "temperature_history": "Temperature History",
     "temperature_history_days": "Temperature history for game days",
     "no_data": "No temperature data available.",
     "loading_error": "Error loading data: {0}",
-    "hotkey_detected": "Temperature hotkey detected - showing temperature data:",
     "min_temp": "Min",
     "max_temp": "Max",
-    "spring": "Spring",
-    "summer": "Summer",
-    "autumn": "Autumn",
-    "winter": "Winter",
-    "january": "January",
-    "february": "February",
-    "march": "March",
-    "april": "April",
-    "may": "May",
-    "june": "June",
-    "july": "July",
-    "august": "August",
-    "september": "September",
-    "october": "October",
-    "november": "November",
-    "december": "December",
     "sensor_current_spawn": "Temperature sensor is currently at spawn point: ({0}, {1}, {2})",
     "sensor_current_location": "Temperature sensor is currently at: ({0}, {1}, {2})",
     "sensor_set_spawn": "Temperature sensor set to spawn point: ({0}, {1}, {2})",
@@ -47,18 +17,6 @@
     "days": "Days",
     "day": "Day",
     "year": "Year",
-    "month_1": "January",
-    "month_2": "February",
-    "month_3": "March",
-    "month_4": "April",
-    "month_5": "May",
-    "month_6": "June",
-    "month_7": "July",
-    "month_8": "August",
-    "month_9": "September",
-    "month_10": "October",
-    "month_11": "November",
-    "month_12": "December",
     "month_short_1": "Jan",
     "month_short_2": "Feb",
     "month_short_3": "Mar",
@@ -70,5 +28,7 @@
     "month_short_9": "Sep",
     "month_short_10": "Oct",
     "month_short_11": "Nov",
-    "month_short_12": "Dec"
+    "month_short_12": "Dec",
+    "no_permission_sensor": "You don't have permission to change the temperature sensor location. Only server administrators can do this.",
+    "sensor_admin_note": " (Only server administrators can change this location.)"
 }
