--- a/assets/temperaturemonitor/lang/pl.json
+++ b/assets/temperaturemonitor/lang/pl.json
@@ -1,43 +1,13 @@
 {
-    "startup_message": "TemperatureMonitor: Metoda Start wywołana! Zapis będzie w {0}",
-    "client_started": "TemperatureMonitor: Metoda start po stronie klienta wywołana!",
-    "server_started": "TemperatureMonitor: Metoda start po stronie serwera wywołana!",
-    "new_game_hour": "TemperatureMonitor: Nowa godzina w grze: {0}",
     "temperature_log": "TemperatureMonitor: {0} - Data w grze: {1}, Temperatura: {2}°C",
-    "saving_data": "TemperatureMonitor: Próba zapisania danych, liczba wpisów: {0}",
-    "no_data_to_save": "TemperatureMonitor: Brak danych do zapisania.",
-    "directory_path": "TemperatureMonitor: Ścieżka do folderu: {0}",
-    "creating_directory": "TemperatureMonitor: Tworzenie katalogu: {0}",
-    "saving_to_file": "TemperatureMonitor: Zapisywanie do pliku: {0}",
-    "file_saved": "TemperatureMonitor: Plik został pomyślnie zapisany.",
-    "file_error": "TemperatureMonitor: BŁĄD: Plik nie istnieje po próbie zapisu!",
-    "data_loaded": "TemperatureMonitor: Wczytano {0} zapisów temperatur z pliku.",
-    "closing_save": "TemperatureMonitor: Zamykanie - zapisywanie {0} temperatur",
     "temperature_data_processing_error": "Błąd przetwarzania danych dla {0}: {1}",
     "reading_data_error": "Błąd odczytu danych: {0}",
     "temperature_history": "Historia temperatur",
     "temperature_history_days": "Historia temperatur dla poszczególnych dni gry",
     "no_data": "Brak danych o temperaturach.",
     "loading_error": "Błąd wczytywania danych: {0}",
-    "hotkey_detected": "Wykryto naciśnięcie skrótu temperatur - pokazuję dane temperatur:",
     "min_temp": "Min",
     "max_temp": "Maks",
-    "spring": "Wiosna",
-    "summer": "Lato",
-    "autumn": "Jesień",
-    "winter": "Zima",
-    "january": "stycznia",
-    "february": "lutego",
-    "march": "marca",
-    "april": "kwietnia",
-    "may": "maja",
-    "june": "czerwca",
-    "july": "lipca",
-    "august": "sierpnia",
-    "september": "września",
-    "october": "października",
-    "november": "listopada",
-    "december": "grudnia",
     "sensor_current_spawn": "Czujnik temperatury jest obecnie w punkcie odrodzenia: ({0}, {1}, {2})",
     "sensor_current_location": "Czujnik temperatury jest obecnie w lokalizacji: ({0}, {1}, {2})",
     "sensor_set_spawn": "Czujnik temperatury ustawiony na punkt odrodzenia: ({0}, {1}, {2})",
@@ -47,18 +17,6 @@
     "days": "Dni",
     "day": "Dzień",
     "year": "Rok",
-    "month_1": "Styczeń",
-    "month_2": "Luty",
-    "month_3": "Marzec",
-    "month_4": "Kwiecień",
-    "month_5": "Maj",
-    "month_6": "Czerwiec",
-    "month_7": "Lipiec",
-    "month_8": "Sierpień",
-    "month_9": "Wrzesień",
-    "month_10": "Październik",
-    "month_11": "Listopad",
-    "month_12": "Grudzień",
     "month_short_1": "Sty",
     "month_short_2": "Lut",
     "month_short_3": "Mar",
@@ -70,5 +28,7 @@
     "month_short_9": "Wrz",
     "month_short_10": "Paz",
     "month_short_11": "Lis",
-    "month_short_12": "Gru"
+    "month_short_12": "Gru",
+    "no_permission_sensor": "Nie masz uprawnień do zmiany lokalizacji czujnika temperatury. Tylko administratorzy serwera mogą to zrobić.",
+    "sensor_admin_note": " (Tylko administratorzy serwera mogą zmienić tę lokalizację.)"
 }
