Add font size adjustment controls to temperature history dialog
- Implement font size adjustment buttons with percentage indicator
- Add client-side persistence of font size preference
- Create user-friendly controls positioned under main heading
- Limit maximum font scale to prevent UI elements from being cut off
- Add translation support for font size interface elements
- Update CHANGELOG.md with new version 0.9.5 details

--- a/assets/temperaturemonitor/lang/en.json
+++ b/assets/temperaturemonitor/lang/en.json
@@ -30,5 +30,6 @@
     "month_short_11": "Nov",
     "month_short_12": "Dec",
     "no_permission_sensor": "You don't have permission to change the temperature sensor location. Only server administrators can do this.",
-    "sensor_admin_note": " (Only server administrators can change this location.)"
+    "sensor_admin_note": " (Only server administrators can change this location.)",
+    "font_size": "Font size"
 }
