Add greenhouse mode for temperature display
- Implement greenhouse mode checkbox that adjusts displayed temperatures by +5°C
- Add tooltip explanation for the greenhouse effect
- Extend settings storage to save greenhouse mode preference
- Create helper method for consistent temperature display with greenhouse adjustment
- Update all temperature displays to use the new formatting function
- Add translations for greenhouse mode UI elements in English and Polish

--- a/assets/temperaturemonitor/lang/en.json
+++ b/assets/temperaturemonitor/lang/en.json
@@ -31,5 +31,7 @@
     "month_short_12": "Dec",
     "no_permission_sensor": "You don't have permission to change the temperature sensor location. Only server administrators can do this.",
     "sensor_admin_note": " (Only server administrators can change this location.)",
-    "font_size": "Font size"
+    "font_size": "Font size",
+    "greenhouse_mode": "Greenhouse mode (+5°C)",
+    "greenhouse_tooltip": "Shows temperatures adjusted for greenhouse effect (+5°C)"
 }
